--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
