--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,43 @@
 # Base image
-FROM python:3.12-slim AS django
+FROM python:3.12-slim AS base
 
 WORKDIR /app
 
-# Install system dependencies and Python dependencies
-RUN apt-get update && apt-get install -y build-essential gcc libpq-dev bash
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy the requirements file and install dependencies
-COPY requirements/prod.txt ./requirements/dev.txt
-# Use a development-specific requirements file
-RUN pip install -r ./requirements/dev.txt
+# Install Python dependencies
+COPY requirements/prod.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Add a debugging step to verify Django is installed
-RUN pip show Django
-RUN pip list  # Debugging step to check installed packages
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+ENTRYPOINT ["/app/entrypoint.sh"]
 
-# Set PYTHONPATH explicitly to ensure Python can find Django
-ENV PYTHONPATH=/app
-
-# Copy the Django app (this includes manage.py)
+# Copy application code
 COPY . .
 
-# Expose Django port
+# Collect static files
+# Check if the .env file is present
+# Add this debug step to check the .env file
+RUN echo "Checking .env file..." && \
+    ls -l /app/.env && \
+    cat /app/.env || echo ".env not found" \
+
+
+# Collect static files
+RUN python manage.py collectstatic --noinput
+# Ensure the STATIC_ROOT directory exists and is writable
+RUN mkdir -p /app/staticfiles && chmod -R 755 /app/staticfiles
+
+# Expose port
 EXPOSE 8000
 
-# Command to run the Django development server in development mode
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Entry point
+CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000"]
