--- a/docker-compose_dev.yml
+++ b/docker-compose_dev.yml
@@ -1,5 +1,19 @@
-  GNU nano 5.8                          docker-compose.yml                                     
 services:
+  # PostgreSQL database service
+  postgres:
+    image: postgres:17-alpine
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    env_file:
+      - .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - internal
+
   # Django website service
   website:
     build:
@@ -14,7 +28,9 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_HOST: postgres
+    depends_on:
+      - postgres
     env_file:
       - .env
     volumes:
@@ -32,7 +48,6 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./backend/staticfiles:/app/staticfiles:ro
-      - certbot_certs:/etc/letsencrypt
     ports:
       - "80:80"
       - "443:443"
@@ -42,17 +57,10 @@ services:
     networks:
       - internal
       - external
-
-  certbot-renew:
-    image: certbot/certbot
-    volumes:
-      - certbot_certs:/etc/letsencrypt
-    command: renew --non-interactive --agree-tos
-
 networks:
   internal:
   external:
 
 volumes:
-  certbot_certs:
+  postgres_data:
   staticfiles:
