Bug Fix: Error with certificate renewal, setup cron job and docker container for running certificate renewal.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,6 +50,6 @@ server {
 
     # Serve ACME challenge for Certbot renewals
     location /.well-known/acme-challenge/ {
-        root /app/staticfiles;
+        root /var/www/certbot;
     }
 }
