--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./backend/staticfiles:/app/staticfiles:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - certbot_www:/var/www/certbot:ro
     ports:
       - "80:80"
       - "443:443"
@@ -48,13 +49,14 @@ services:
   certbot-renew:
     image: certbot/certbot
     volumes:
-      - certbot_certs:/etc/letsencrypt
-    command: renew --non-interactive --agree-tos
+      - /etc/letsencrypt:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    command: renew --webroot -w /var/www/certbot --non-interactive --agree-tos
 
 networks:
   internal:
   external:
 
 volumes:
-  certbot_certs:
+  certbot_www:
   staticfiles:
