Major cleanup commit, been a while since I was working on this and I want to keep it a little more simple and clean it up so I can make it a public repo, I'll have to go through more and make more changes in the future but this works for now.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-/KnitToKnitPair.pem
-/.env
+.idea/
+
+*.env
+.env.*
+static/
+staticfiles/
+*.log
+*.pem
+__pycache__/
+*.pyc
+.DS_Store
+task-definition.json
+deploy.sh
