--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,21 @@
-# Use an official Node.js image.
+# Builder stage - builds React for production
+FROM node:18-alpine AS build
+
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+RUN npm run build
+
+# Developer stage - for hot-reloading
 FROM node:18-alpine AS developer
 
-# Set working directory in the container
 WORKDIR /app
-
-# Copy package.json and package-lock.json (or yarn.lock if you are using Yarn)
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy the rest of the app's code
 COPY . .
 
-# Expose the port Vite runs on (default is 5173)
 EXPOSE 5173
-
-# Set environment variables for hot-reloading in Docker
 ENV CHOKIDAR_USEPOLLING=true
 
-# Start Vite in development mode (hot-reloading)
 CMD ["npm", "run", "dev"]
