--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -23,7 +23,7 @@ server {
 
     # Handle Admin
     location /admin/ {
-        proxy_pass http://website:8000/admin;
+        proxy_pass http://website:8000/admin/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
