--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,8 @@ services:
     env_file:
       - .env
     volumes:
-      - staticfiles:/app/staticfiles
+      - ./backend/static:/app/staticfiles
+      - ./backend/media:/app/media
     ports:
       - "8000:8000"
     restart: unless-stopped
@@ -65,7 +66,7 @@ services:
     image: nginx:alpine
     volumes:
       - ./nginx/nginx.${STAGE}.conf:/etc/nginx/conf.d/default.conf:ro
-      - staticfiles:/app/staticfiles:ro
+      - ./backend/static:/app/staticfiles:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - certbot_www:/var/www/certbot:ro
     ports:
